MPS-38672 Model validation understands GP contributions
Didn't leave forkAs check for legacy cases as I don't expect lot (any) of
 them to show up and the logic was flawed anyway (depending on order
 devkits/plans with/without forks come)